--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 			<li><i>Related Coursework</i>: AP Computer Science, AP BC Calculus, AP Statistics, AP Chemistry, AP Physics C</li>
 		</ul>
 		<h3>Work Experience</h3>
-		<p><strong>GBS-HRSS Information Technology Development Organization Intern</strong> (July 2013 - Aug. 2013)<br/>INTERalliance (<strong>Procter & Gamble</strong>, Cincinnati, OH)</p>
+		<p><strong>GBS-HRSS Information Technology Development Organization Intern</strong> (July 2013 - Aug. 2013)<br/>INTERalliance (<strong>Procter and Gamble</strong>, Cincinnati, OH)</p>
 		<ul>
 			<li>Entered necessary business impact information regarding enterprise architecture into P&G's data repository MEGA</li>
 			<li>Provided and presented a training presentation on how to use MEGA and its company functions for team members</li>
