--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		<br/>
 		<h1>Emily Chao</h1>
 		<img id="profile-picture" src="assets/img/EmilyChao.jpg" width="200" height="300"/>
-		<p>Hello, I am currently an undergraduate student at the University of Illinois, Urbana-Champaign, pursuing a Bachelor of Science in Computer Science as a James Scholar. I have a diverse skill set among areas such as graphic design, object-oriented programming, web development, and user interface design.
+		<p>Hello, I am currently an undergraduate student at the University of Illinois, Urbana-Champaign, pursuing a Bachelor of Science in Computer Science as a James Scholar. I have a diverse skill set among areas such as graphic design, object-oriented programming, web development, and user interface design.</p>
 		<p>I am passionate about technology and its ever-increasing rate of advancement, and as a CS major, I strive to help others overcome challenges in using technology so that they can better their quality of life.</p>
-		<p>I have experience working with professionals at top companies in the Cincinnati area as a high school IT intern, including Fortune 50 companies such as Procter & Gamble. I also have experience working in a journalism setting with my school newsmagazine, the Lakota East <i>Spark</i>, and have gained valuable interviewing and communication skills from my three years in the program. This past year, I've gained much insight and experience in project management as webmaster for <i>Spark</i>'s rapidly expanding website.</p>
+		<p>I have experience working with professionals at top companies in the Cincinnati area as a high school IT intern, including Fortune 50 companies such as Procter and Gamble. I also have experience working in a journalism setting with my school newsmagazine, the Lakota East <i>Spark</i>, and have gained valuable interviewing and communication skills from my three years in the program. This past year, I've gained much insight and experience in project management as webmaster for <i>Spark</i>'s rapidly expanding website.</p>
 		<p>I look forward to making new connections, and applying my skills and knowledge to real-world projects! Feel free to poke around my website. Any feedback is greatly appreciated.</p>
 	</body>
 </html>
