--- a/chictech/example/favbooks.html
+++ b/chictech/example/favbooks.html
@@ -24,10 +24,10 @@
 		<div class="navbar">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="pictures.html">Pictures</a></li>
-				<li><a href="places.html">Places</a></li>
-				<li><a href="favorites.html">Favorites</a></li>
+				<li><a href="favbooks.html">Favorite Books</a></li>
+				<li><a href="favmovies.html">Favorite Pictures</a></li>
+				<li><a href="favplaces.html">Favorite Places</a></li>
+				<li><a href="favfood.html">Favorite Food</a></li>
 		</div>
 		<!-- end navigation bar -->
 		<table class="pictures">
