--- a/chictech/example/favplaces.html
+++ b/chictech/example/favplaces.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles.css"/>
-		<script src="jquery.js"/>
+		<script src="jquery-1.11.0.min.js"></script>
 		<script>
 			function displayCaption()
 			{
