--- a/chictech/example/favbooks.html
+++ b/chictech/example/favbooks.html
@@ -2,23 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles.css"/>
-		<script src="jquery.js"/>
-		<script>
-			function displayNothing()
-			{
-				var commentArea = document.getElementById("comment");
-				if (commentArea.innerHTML == "")
-				{
-					commentArea.innerHTML = "<p>No comments.</p>";
-				}
-			}
-			function getComment()
-			{
-				var commentArea = document.getElementById("comment");
-				var comment = prompt("Add a comment!");
-				commentArea.innerHTML = commentArea.innerHTML + "<p>" + comment + "</p>";
-			}
-		</script>
+		<script src="jquery-1.11.0.min.js"></script>
 	</head>
 	<body class="body-center">
 		<!-- start navigation bar -->
@@ -33,13 +17,18 @@
 		<!-- end navigation bar -->
 		<table class="pictures">
 			<tr>
-				<td><img src="pic1.png"/></td>
-				<td><img src="pic2.jpg"/></td>
-				<td><img src="pic3.jpg"/></td>
-				<td><img src="pic4.jpg"/></td>
+				<td><img src="book1.jpeg"/></td>
+				<td><img src="book2.jpg"/></td>
+				<td><img src="book3.jpg"/></td>
 			</tr>
 		</table>
-		<div id="comment" onload="displayNothing()"></div>
-		<button type="button" onclick="getComment()">Leave a Comment</button>
+		<p>I am obsessed with Dan Brown's books. Here are some of my personal favorites. </p>
+		<table class="pictures">
+			<tr>
+				<td><img src="db1.jpg"/></td>
+				<td><img src="db2.jpg"/></td>
+				<td><img src="db3.jpg"/></td>
+			</tr>
+		</table>
 	</body>
 </html>
