--- a/chictech/example/favfood.html
+++ b/chictech/example/favfood.html
@@ -2,13 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles.css"/>
-		<script src="jquery.js"/>
-		<script>
-			function displayMessage()
-			{
-				alert("Have fun at ChicTech");
-			}
-		</script>
+		<script src="jquery-1.11.0.min.js"></script>
 	</head>
 	<body class="body-center">
 		<!-- start navigation bar -->
@@ -21,27 +15,6 @@
 				<li><a href="favfood.html">Favorite Food</a></li>
 		</div>
 		<!-- end navigation bar -->
-		<br/>
-		<h1>About Me</h1>
-		<p>I am currently a freshman at the University of Illinois at Urbana-Champaign studying Computer Science.</p>
-		<h3>Organizations I'm Involved In</h3>
-		<ul>
-			<li>Society of Women Engineers</li>
-			<ul>
-				<li>Secretary - Team Tech</li>
-			</ul>
-			<li>Women in Computer Science</li>
-			<ul>
-				<li>HTML, CSS, Javascript Workshop Director - ChicTech</li>
-				<li>Member - Tech Team</li>
-			</ul>
-		</ul>
-		<h3>Current Work Experience</h3>
-		<ul>
-			<li>Web Developer - Miss Possible</li>
-			<li>Information Research Intern - Dow Chemical Company</li>
-		</ul>
-
-		<button type="button" onclick="displayMessage()">Click Me!</button>
+		
 	</body>
 </html>
