--- a/chictech/example/favfood.html
+++ b/chictech/example/favfood.html
@@ -15,6 +15,20 @@
 				<li><a href="favfood.html">Favorite Food</a></li>
 		</div>
 		<!-- end navigation bar -->
-		
+		<h1>My Favorite Food</h1>
+		<p>Food is beautiful. It's a lovely thing for the soul. </p>
+		<p>Here are some of my favorite foods.</p>
+		<ul>
+			<li>Peking Duck</li>
+			<li>Brownies</li>
+			<li>Fruit</li>
+		</ul>
+		<table class="favorites">
+			<tr>
+				<td><img src="food1.jpg"/></td>
+				<td><img src="food2.jpg"/></td>
+				<td><img src="food3.jpg"/></td>
+			</tr>
+		</table>
 	</body>
 </html>
