--- a/chictech/example/favmovies.html
+++ b/chictech/example/favmovies.html
@@ -33,6 +33,6 @@
 		</table>
 		<p>My current favorite movie is Frozen. I am a huge Disney Fan. </p>
 		<button type="button">Move Image</button><br/><br/>
-		<img src="movie3.jpg" alt="Frozen" width="300px" height="auto" id="frozenposter" style="position: absolute"/>
+		<img src="movie3.jpg" alt="Frozen" width="300px" height="auto" id="frozenposter" style="position: relative"/>
 	</body>
 </html>
