added a movie trailer

--- a/chictech/example/favmovies.html
+++ b/chictech/example/favmovies.html
@@ -32,6 +32,7 @@
 			</tr>
 		</table>
 		<p>My current favorite movie is Frozen. I am a huge Disney Fan. </p>
+		<iframe width="560" height="315" src="//www.youtube.com/embed/TbQm5doF_Uc" frameborder="0" allowfullscreen></iframe>
 		<button type="button">Move Image</button><br/><br/>
 		<img src="movie3.jpg" alt="Frozen" width="300px" height="auto" id="frozenposter" style="position: relative"/>
 	</body>
