--- a/chictech/example/favbooks.html
+++ b/chictech/example/favbooks.html
@@ -10,7 +10,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="favbooks.html">Favorite Books</a></li>
-				<li><a href="favmovies.html">Favorite Pictures</a></li>
+				<li><a href="favmovies.html">Favorite Movies</a></li>
 				<li><a href="favplaces.html">Favorite Places</a></li>
 				<li><a href="favfood.html">Favorite Food</a></li>
 		</div>
