--- a/resume.html
+++ b/resume.html
@@ -21,31 +21,41 @@
 		<br/>
 		<br/>
 		<h1>Resume</h1>
-		<h3>Objective</h3>
-		<p>To gain an internship in information technology, web development, or software development</p>
 		<h3>Education</h3>
 		<p><strong>Class of 2017 - University of Illinois - Urbana-Champaign, IL</strong></p>
 		<ul>
-			<li><i>Major</i>: Computer Science, College of Engineering</li>
-			<li><i>Current GPA</i>: 3.91/4.00</li>
-			<li><i>Honors</i>: James Scholar, University Achievement Scholarship Recipient, GE STAR Award Recipient</li>
-			<li><i>Related Coursework</i>: Introduction to Computer Science, Discrete Structures, Applied Linear Algebra, Calculus III</li>
+			<li><i>Major</i>: B.S. Computer Science</li>
+			<li><i>Current GPA</i>: 3.95/4.00</li>
+			<li><i>Awards</i>: Dean's List, James Scholar, University Achievement Scholarship Recipient, GE STAR Award Recipient, Cisco Scholarship</li>
+			<li><i>Related Coursework</i>: Introduction to Computer Science (CS 125), Discrete Structures (CS 173), Applied Linear Algebra (MATH 415), Honors Calculus III (MATH 241)</li>
 		</ul>
 		<p><strong>Diploma with Honors - Class of 2013 - Lakota East High School - Liberty Township, OH</strong></p>
 		<ul>
 			<li><i>GPA</i>: Valedictorian (rank: 1/685), 4.75/4.00 Weighted, 4.00/4.00 Unweighted</li>
-			<li><i>Honors</i>: National AP Scholar, National Merit Commended Scholar, NCWIT Award for Aspirations in Computing Ohio Affiliate Award</li>
-			<li><i>Related Coursework</i>: AP Computer Science, AP BC Calculus, AP Statistics, AP Chemistry, AP Physics C</li>
+			<li><i>Awards</i>: NCWIT Award for Aspirations in Computing Ohio Affiliate Award, National AP Scholar, National Merit Commended Scholar</li>
+			<li><i>Related Coursework</i>: AP Computer Science, AP Calculus BC, AP Physics C, AP Chemistry, AP Statistics</li>
 		</ul>
 		<h3>Work Experience</h3>
-		<p><strong>GBS-HRSS Information Technology Development Organization Intern</strong> (July 2013 - Aug. 2013)<br/>INTERalliance (<strong>Procter and Gamble</strong>, Cincinnati, OH)</p>
+		<p><strong>kCura</strong>, Chicago, IL<br/><strong>Software Engineering Intern, Product Development</strong>, May 2014 - Present</p>
+		<ul>
+			<li>Using the custom Relativity API, Visual C#, and SQL, continuing development on an application built on top of kCura’s flagship product Relativity that analyzes and processes U.S. patent grant data that is uploaded onto a custom Google site.</li>
+			<li>Added features to the processing of such data that allows the user to sort the patents by their patent classifications and sub-classifications, as well as see various metrics of the patent including expiration date and extracted text.</li>
+			<li>Added components that downloads and processes assignment data for patent grants to keep the assignees and owners of patents up-to-date daily.</li>
+		</ul>
+		<p><strong>Miss Possible</strong>, Urbana-Champaign, IL<br/><strong>Web Developer</strong>, February 2014 - Present</p>
+		<ul>
+			<li>Designed and currently maintaining the website for Miss Possible (bemisspossible.com), a startup that is focused on empowering girls by providing them strong female role models through dolls as well as developing apps that let girls learn about famous female scientists as well as be able to do science experiments in their own homes.</li>
+			<li>Used HTML, CSS, and Javascript to code the website’s main design, as well as PHP and MySQL to implement a database-driven backend to maintain blog posts and an email sign-up list.</li>
+			<li>Assisted in conducting consumer interviews for Miss Possible at Engineering Open House.</li>
+			<li>Assisted in using social media, email and other mediums to spread the word about Miss Possible’s Indiegogo campaign.</li>
+		<p><strong>Procter and Gamble</strong> (INTERalliance), Cincinnati, OH<br/><strong>GBS-HRSS Information Technology Development Organization Intern</strong>, July 2013 - Aug. 2013</p>
 		<ul>
 			<li>Entered necessary business impact information regarding enterprise architecture into P&G's data repository MEGA</li>
 			<li>Provided and presented a training presentation on how to use MEGA and its company functions for team members</li>
 			<li>Tested user interface standardization of an in-house application on various mobile operating systems and Internet browsers</li>
 			<li>Collated software download results for management after testing the initial points of P&G's HRSS Business Continuity Plan, as well as surveyed organization members regarding required hardware for the plan</li>
 		</ul>
-		<p><strong>Information Technology Application Development Intern</strong> (June 2012 - Aug. 2012)<br/>INTERalliance (<strong>Paycor Inc.</strong>, Cincinnati, OH)</p>
+		<p><strong>Paycor Inc.</strong> (INTERalliance), Cincinnati, OH<br/><strong>Information Technology Application Development Intern</strong>, June 2012 - Aug. 2012</p>
 		<ul>
 			<li>Designed the user interface for one of Paycor's in-house web applications using HTML and CSS</li>
 			<li>Analyzed video software options to help Paycor with coordinating documents to offshore employees in Mumbai, India</li>
@@ -53,29 +63,33 @@
 			<li>Developed a data-driven version of Paycor's online training application using Microsoft .NET Visual C# and ASPX.NET</li>
 		</ul>
 		<h3>Leadership and Activities</h3>
+		<p><strong>CS 125 Course Assistant</strong> (Jan. 2014 - May 2014)</p>
+		<ul>
+			<li>Assisted the CS 125 teaching assistant with one 2-hour weekly discussion class by taking attendance, answering questions.</li>
+			<li>Held one office hour per week to assist students with machine problems, learning new concepts, and other homework needs.</li>
 		<p><strong>Society of Women Engineers</strong> (Aug. 2013 - Present)<br/><i>Team Tech, Secretary</i></p>
 		<ul>
-			<li>Keep meeting minutes and research methods for implementing a given project with a corporate sponsor</li>
+			<li>As Secretary, kept meeting minutes during weekly meetings.</li>
+			<li>Research methods for implementing a more cost-effective and sustainable tractor seat for John Deere.</li>
+			<li>With 4 team members, drafted and presented a new design for the tractor seat for the Team Tech Directors.</li>
 		</ul>
 		<p><strong>Women in Computer Science</strong> (Aug. 2013 - Present)</p>
 		<ul>
-			<li>Attend meetings, member of Tech Team designing the front-end portion of an online sign-in application for meetings</li>
+			<li>Member of WCS Tech Team, designed the front-end portion of an online sign-in application for meetings.</li>
+			<li>Member of the planning committee for WCS’ annual ChicTech retreat, a retreat that invites high school and middle school girls to come learn about computer science.</li>
+			<li>Led a workshop on HTML/CSS and taught 20 girls how to design their own website.</li>
 		</ul>
-		<p><strong>Lakota East <i>Spark</i> Newsmagazine</strong> (Aug. 2010 - June 2013)<br/><i>Opinion Editor 2011-2012, Webmaster, Editorial</i></p>
+		<p><strong>Engineering Student Alumni Ambassador</strong> (April 2014 - Present)</p>
 		<ul>
-			<li>Staff of 120 students received Spark’s 11th Columbia Gold Crown and National Student Press Association Pacemaker award</li>
-			<li>Redesigned the <i>Spark</i> website and received the status of National Student Press Association Pacemaker Finalist as Webmaster</li>
-			<li>Led Opinion section to write, design and publish columns and cartoons related to the interest of students and parents</li>
-		</ul>
-		<p><strong>Lakota East Science Olympiad</strong> (Aug. 2012 - Feb. 2013)<br/><i>Team Captain 2012-2013</i></p>
-		<ul>
-			<li>Organized teams, contact lists, and fundraisers for and participated in the high school regional Science Olympiad Competition</li>
-		</ul>
+			<li>Attended various networking events sponsored by ESAA with UIUC Engineering alumni.</li>
+			<li>Volunteered at Engineering Senior Sunday, an event held at the end of the year to celebrate the seniors graduating from Engineering at UIUC.</li>
+			<li>Currently working with the Chairman and Publicity Chair to update all of the content on the organization’s wiki page as well as giving the wiki a new user interface redesign.</li>
 		<h3>Skills</h3>
 		<ul>
-			<li><i>Programming Languages</i> - Java (Proficient), Visual C# (Proficient), Visual Basic for Applications (Basic)</li>
-			<li><i>Web Development</i> - HTML (Proficient), CSS (Proficient), ASPX.NET (Basic), WordPress (Proficient)</li>
-			<li><i>Version Control Systems</i> - Git (Basic), SVN (Basic), Team Foundation Server (Basic)</li>
+			<li><i>Programming Languages</i>: Java (Proficient), Visual C# (Advanced), Visual Basic for Applications (Basic)</li>
+			<li><i>Front-end Development</i>: HTML (Proficient), CSS (Proficient), ASPX.NET (Basic), WordPress (Proficient), Javascript (Proficient), jQuery (Basic)</li>
+			<li><i>Back-end Development</i>: SQL (Basic), MySQL (Basic), PHP (Basic)</li>
+			<li><i>Version Control Systems</i>: Git (Basic), SVN (Basic), Mercurial (Proficient), Team Foundation Server (Basic)</li>
 		</ul>
 	</body>
 </html>
