--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,8 @@
 		<h1>Projects - Past, Present and Future</h1>
 		<h3>Website for Miss Possible - In Progress</h3>
 		<iframe src="http://www.bemisspossible.com" height=300px width=700px></iframe>
-		<p><i>I am currently the web developer for Miss Possible, a startup that is working to change a generation of girls' lives by making dolls of great female role models. We are also working to develop apps that these role models would then teach hands-on activities to these girls. Be sure to support us on Indiegogo <a href="igg.me/at/misspossible">here</a>!
+		<p><i>I am currently the web developer for Miss Possible, a startup that is working to change a generation of girls' lives by making dolls of great female role models. We are also working to develop apps that these role models would then teach hands-on activities to these girls. Be sure to support us on Indiegogo <a href="igg.me/at/misspossible">here</a>!</p>
+		<p>Programs and Languages Used: HTML, CSS, Bitbucket, Git, Javascript, JQuery, PHP, MySQL</p>
 		<h3>This Website - In Progress</h3>
 		<p><i>I started my online portfolio as an assignment in ENG 100. Throughout this project, I mastered basic web development by coding in HTML, CSS, utilized source control for the project with Github, and managed my website hosting through FTP. I implemented a novel feature which includes portfolio viewers. It's still a work very much in progress, so any feedback is greatly appreciated.</i></p>
 		<p>Programs and Languages Used: HTML, CSS, Github</p>
