added an entry in projects to reflect recourser

--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,10 @@
 		<iframe src="http://web.engr.illinois.edu/~bifft2" height=300px width=700px></iframe>
 		<p><i>Three team members and I programmed a game of Where's Waldo. Using the Google Maps API, we give Waldo a random location around the world. The player first receives a Javascript message with a clue for the player to guess which continent Waldo is on. Once the right continent is identified, the player is given a Google Maps marker and can move it around the continent until Waldo is found. There is a hot-cold bar at the top of the map to indicate how close or far away the player's current pointer location is from Waldo's actual location. Once Waldo is found, the player is given a score out of 100 based on the time taken to find Waldo. The player can share the game via different social media sites.</i></p>
 		<p>Languages Used: HTML, CSS, Javascript, Google Maps API, Facebook API, Twitter API, Google Plus API, Tumblr API</p>
+		<h3>Recourser Four-Year College Class Planner - MHacks Hackathon, Jan. 2014</h3>
+		<iframe src="http://recourser.herokuapp.com" height=300px width=700px></iframe>
+		<p><i>Three team members and I made a web application that grabs course information from UIUC's Course Catalog. Our application helps students plan out their 4-year plan in college.</i></p>
+		<p>Languages Used: Python, Git, HTML, CSS, Javascript, JQuery</p>
 		<h3>Lakota East Spark Newsmagazine - Opinion Editor, 2011-2012, Webmaster 2012-2013</h3>
 		<h4>Website</h4>
 		<iframe src="http://www.lakotaeastspark.com/" height=300px width=700px></iframe>
@@ -41,8 +45,5 @@
 		<iframe src="assets/elchao2_journalismPortfolio.pdf" height=300px width=700px></iframe>
 		<p><i>I started out my first year in high school journalism writing stories ranging from news briefs to features. I then gravitated toward column writing, becoming Opinion Editor my junior year of high school. Later on, I started to explore the features of graphic design software by doing more infographic pieces.</i></p>
 		<p>Programs Used: Adobe Photoshop, Illustrator, InDesign</p>
-		<h3>AP Computer Science</h3>
-		<p><i>These projects, which ranged from games to simulations, were designed by my teacher to help us master basic data structures like linked lists, stacks, queues and arrays. Specific projects include a word guessing game (much like hangman), a puzzle slider game, a barbershop queue simulator, etc. Source code can be found at my <a href="https://github.com/elchao96">github</a>.</i></p>
-		<p>Programs and Languages Used: Visual C#, Microsoft Visual Studio</p>
 	</body>
 </html>
