--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 			<ul>
 				<li><a href="mailto:elchao96@gmail.com"><img class="contactImg" src="assets/img/EMAIL.png"/></a></li>
 				<li><a href="http://www.github.com/elchao96"/><img class="contactImg" src="assets/img/GITHUB.png"></a></li>
-				<li><a href="http://www.linkedin.com/pub/emily-chao/79/110/31a/"><img class="contactImg" src="assets/img/LINKEDIN.png"></a></li>
+				<li><a href="http://www.linkedin.com/in/elchao96"><img class="contactImg" src="assets/img/LINKEDIN.png"></a></li>
 			</ul>
 		</div>
 	</body>
