--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<title>Emily Chao's Online Portfolio</title>
 		<script type="text/javascript" src="assets/js/portfolio.js"></script>
 		<!-- navbar -->
+		<h1>REDESIGN IN PROGRESS</h1>
+		<h1>CHECK BACK IN A MONTH OR SO</h1>
+		<!--
 		<div class="navbar">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -15,9 +18,9 @@
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
-		</div>
+		</div>-->
 		<!-- end navbar -->
-		<br/>
+		<!--<br/>
 		<br/>
 		<br/>
 		<h1>Emily Chao</h1>
@@ -25,6 +28,6 @@
 		<p>Hello, I am currently an undergraduate student at the University of Illinois, Urbana-Champaign, pursuing a Bachelor of Science in Computer Science as a James Scholar. I have a diverse skill set among areas such as graphic design, object-oriented programming, web development, and user interface design.</p>
 		<p>I am passionate about technology and its ever-increasing rate of advancement, and as a CS major, I strive to help others overcome challenges in using technology so that they can better their quality of life.</p>
 		<p>I have experience working with professionals at top companies in the Cincinnati area as a high school IT intern, including Fortune 50 companies such as Procter and Gamble. I also have experience working in a journalism setting with my school newsmagazine, the Lakota East <i>Spark</i>, and have gained valuable interviewing and communication skills from my three years in the program. This past year, I've gained much insight and experience in project management as webmaster for <i>Spark</i>'s rapidly expanding website.</p>
-		<p>I look forward to making new connections, and applying my skills and knowledge to real-world projects! Feel free to poke around my website. Any feedback is greatly appreciated.</p>
+		<p>I look forward to making new connections, and applying my skills and knowledge to real-world projects! Feel free to poke around my website. Any feedback is greatly appreciated.</p>-->
 	</body>
 </html>
