--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -1,3 +1,19 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<!--stylesheets-->
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="assets/css/site.css"/>
+
+		<!--meta-->
+		<title>Emily Chao</title>
+		<meta name="description" content="I'm a current CS student at UIUC. Check out my work.">
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
+
+		<!--scripts-->
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
+		<script src="script.js"></script>
+	</head>
+	<body>
+	</body>
 </html>
