--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<!--stylesheets-->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
 		<link rel="stylesheet" href="assets/css/site.css"/>
 
 		<!--meta-->
@@ -11,9 +12,17 @@
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 
 		<!--scripts-->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
+		<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>-->
 		<script src="script.js"></script>
 	</head>
 	<body>
+		<nav class="nav navbar-default navbar-fixed-top">
+			<ul class="nav nav-tabs nav-justified" role="tablist">
+				<li><a href="#"><i class="fa fa-home fa-5x"></i></a></li>
+				<li><a href="#resume"><i class="fa fa-file-text-o fa-5x"></i></a></li>
+				<li><a href="#projects"><i class="fa fa-github fa-5x"></i></a></li>
+				<li><a href="#blog"><i class="fa fa-pencil-square fa-5x"></i></a></li>
+			</ul>
+		</nav>
 	</body>
 </html>
