changed the navbar to horizontal and pills form with default background color

--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -16,12 +16,12 @@
 		<script src="script.js"></script>
 	</head>
 	<body>
-		<nav class="nav navbar-default navbar-fixed-top">
-			<ul class="nav nav-tabs nav-justified" role="tablist">
-				<li><a href="#"><i class="fa fa-home fa-5x"></i></a></li>
-				<li><a href="#resume"><i class="fa fa-file-text-o fa-5x"></i></a></li>
-				<li><a href="#projects"><i class="fa fa-github fa-5x"></i></a></li>
-				<li><a href="#blog"><i class="fa fa-pencil-square fa-5x"></i></a></li>
+		<nav class="nav navbar-default">
+			<ul class="nav nav-tabs" role="tablist">
+				<li><a href="#"><i class="fa fa-home fa-5x"></i><br/>Home</a></li>
+				<li><a href="#resume"><i class="fa fa-file-text-o fa-5x"></i><br/>Resume</a></li>
+				<li><a href="#projects"><i class="fa fa-github fa-5x"></i><br/>Projects</a></li>
+				<li><a href="#blog"><i class="fa fa-pencil-square fa-5x"></i><br/>Blog</a></li>
 			</ul>
 		</nav>
 	</body>
