added a footer with github, linkedin and twitter links and icons, yet to be styled

--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -24,5 +24,16 @@
 				<li><a href="#blog"><i class="fa fa-pencil-square fa-5x"></i><br/>Blog</a></li>
 			</ul>
 		</nav>
+		<div id="main">
+		</div>
+		<footer>
+			<div class="col-md-3">
+				<ul>
+					<li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-2x"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+					<li><a href="https://twitter.com/emilychaosays"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+				</ul>
+			</div>
+		</footer>
 	</body>
 </html>
