--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -10,30 +10,54 @@
 		<title>Emily Chao</title>
 		<meta name="description" content="I'm a current CS student at UIUC. Check out my work.">
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
-
-		<!--scripts-->
-		<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>-->
-		<script src="script.js"></script>
 	</head>
 	<body>
-		<nav class="nav navbar-default">
-			<ul class="nav nav-tabs" role="tablist">
-				<li><a href="#"><i class="fa fa-home fa-5x"></i><br/>Home</a></li>
-				<li><a href="#resume"><i class="fa fa-file-text-o fa-5x"></i><br/>Resume</a></li>
-				<li><a href="#projects"><i class="fa fa-github fa-5x"></i><br/>Projects</a></li>
-				<li><a href="#blog"><i class="fa fa-pencil-square fa-5x"></i><br/>Blog</a></li>
-			</ul>
-		</nav>
-		<div id="main">
-		</div>
-		<footer>
-			<div class="col-md-3">
-				<ul>
-					<li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-2x"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-					<li><a href="https://twitter.com/emilychaosays"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-				</ul>
+		<div class="wrapper">
+			<nav class="navbar navbar-default" role="navigation">
+  				<div class="container-fluid">
+    				<div class="navbar-header">
+      					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNav">
+        					<span class="sr-only">Toggle navigation</span>
+        					<span class="icon-bar"></span>
+        					<span class="icon-bar"></span>
+        					<span class="icon-bar"></span>
+      					</button>
+      					<a class="navbar-brand" href="#">Emily Chao</a>
+    				</div>
+    				<div class="collapse navbar-collapse" id="mainNav">
+      					<ul class="nav navbar-nav">
+        					<li><a class="scroll-link" data-id="main">Home</a></li>
+							<li><a class="scroll-link" data-id="resume">Resume</a></li>
+							<li><a class="scroll-link" data-id="projects">Projects</a></li>
+							<li><a class="scroll-link" data-id="blog">Blog</a></li>
+							<li><a class="scroll-link" data-id="contact">Contact Me</a></li>
+						</ul>
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-2x"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+							<li><a href="https://twitter.com/emilychaosays"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<div class="page-section" id="main">
+				<div class="jumbotron">
+					<h1>Emily Chao</h1>
+				</div>
 			</div>
+			<div class="page-section" id="resume">
+			</div>
+			<div class="page-section" id="projects">
+			</div>
+			<div class="page-section" id="blog">
+			</div>
+			<div class="push">
+			</div>
+		</div>
+		<footer id="contact">
 		</footer>
+
+		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
+		<script src="assets/scripts/site.js" type="text/javascript"></script>
 	</body>
 </html>
