--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -43,19 +43,30 @@
 			<div class="page-section" id="main">
 				<div class="jumbotron">
 					<h1>Emily Chao</h1>
+					<p><strong>CS'17 UIUC</strong></p>
 				</div>
 			</div>
 			<div class="page-section" id="resume">
+				<div class="panel-group" id="accordion">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" data-parent="#accordion" href="#collapseEducation">Education</a>
+							</h4>
+						</div>
+						<div id="collapseEducation" class="panel-collapse collapse in">
+							<div class="panel-body">
+								
 			</div>
 			<div class="page-section" id="projects">
 			</div>
 			<div class="page-section" id="blog">
 			</div>
+			<div class="contact" id="contact">
+			</div>
 			<div class="push">
 			</div>
 		</div>
-		<footer id="contact">
-		</footer>
 
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/site.js" type="text/javascript"></script>
