--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -200,7 +200,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="leadershipActivities">Leadership and Activites</a>
+								<a data-toggle="collapse" data-parent="#accordion" href="#leadershipActivities">Leadership and Activites</a>
 							</h4>
 						</div>
 						<div id="leadershipActivities" class="panel-collapse collapse">
