making more modifications to the panel and accordion

--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -52,7 +52,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#education">Education</a>
+								<a data-toggle="collapse" data-parent="#accordionEducation" href="#education">Education</a>
 							</h4>
 						</div>
 						<div id="education" class="panel-collapse collapse in">
@@ -114,7 +114,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#workExperience">Work Experience</a>
+								<a data-toggle="collapse" data-parent="#accordionWork" href="#workExperience">Work Experience</a>
 							</h4>
 						</div>
 						<div id="workExperience" class="panel-collapse collapse">
@@ -200,7 +200,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#leadershipActivities">Leadership and Activites</a>
+								<a data-toggle="collapse" data-parent="#accordionLeadership" href="#leadershipActivities">Leadership and Activites</a>
 							</h4>
 						</div>
 						<div id="leadershipActivities" class="panel-collapse collapse">
@@ -257,7 +257,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#skills">Skills</a>
+								<a data-toggle="collapse" data-parent="#accordionSkills" href="#skills">Skills</a>
 							</h4>
 						</div>
 						<div id="skills" class="panel-collapse collapse">
