--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -55,7 +55,7 @@
 								<a data-toggle="collapse" data-parent="#accordion" href="#education">Education</a>
 							</h4>
 						</div>
-						<div id="education" class="panel-collapse collapse">
+						<div id="education" class="panel-collapse collapse in">
 							<div class="panel-body">
 								<!-- UIUC -->
 								<div class="floatCleared">
