--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -329,6 +329,7 @@
 			</div>
 		</div>
 
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/site.js" type="text/javascript"></script>
