modified with angular

--- a/REDESIGN/blog.html
+++ b/REDESIGN/blog.html
@@ -1,3 +1,5 @@
-<!DOCTYPE html>
-<html>
-</html>
+<div class="jumbotron text-center">
+	<h1>Blog</h1>
+	{{message}}
+</div>
+<p>Check back for my posts. I write everything on paper first, but then I take the time to edit so that you aren't bombarded by my actual stream of conscience.</p>
