--- a/REDESIGN/projects.html
+++ b/REDESIGN/projects.html
@@ -1,3 +1,16 @@
-<!DOCTYPE html>
-<html>
-</html>
+<div class="jumbotron text-center">
+	<h1>Projects</h1>
+	{{message}}
+</div>
+<div class="col-md-3">
+	<p>Where's Waldo International</p>
+</div>
+<div class="col-md-3">
+	<p>WCS Sign-In App</p>
+</div>
+<div class="col-md-3">
+	<p>Recourser</p>
+</div>
+<div class="col-md-3">
+	<p>Lakota East Spark Portfolio</p>
+</div>
