--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="emilyChaoApp">
 	<head>
 		<!--stylesheets-->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
 		<link rel="stylesheet" href="assets/css/site.css"/>
+
+		<base href="/">
 
 		<!--scripts-->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular.min.js" type="text/javascript"></script>
@@ -17,7 +19,7 @@
 		<meta name="description" content="I'm a current CS student at UIUC. Check out my work.">
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	</head>
-	<body>
+	<body ng-controller="mainController">
 		<nav class="navbar navbar-default" role="navigation">
   			<div class="container-fluid">
     			<div class="navbar-header">
