--- a/REDESIGN/index.html
+++ b/REDESIGN/index.html
@@ -10,7 +10,7 @@
 
 		<!--scripts-->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular.min.js" type="text/javascript"></script>
-		<script src="assets/scripts/script.js" type="text/javascript"></script>
+		<script src="assets/scripts/site.js" type="text/javascript"></script>
 		<script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
 
@@ -29,7 +29,7 @@
        					<span class="icon-bar"></span>
        					<span class="icon-bar"></span>
       				</button>
-      				<a class="navbar-brand" href="#">Emily Chao</a>
+      				<a class="navbar-brand" href="/">Emily Chao</a>
     			</div>
     			<div class="collapse navbar-collapse" id="mainNav">
      				<ul class="nav navbar-nav">
